# ResSAT

./: LICENSE  README.md  SOURCES.txt  config.py  data_loader (8).py  dataset.py  environment.yml  gene_list.csv  models (8).py  models.py  pyproject.toml  requires.txt  ressat_predict (8).py  ressat_predict.py  ressat_train (8).py  ressat_train.py  utils (9).py  utils.py
data/: pca_info.pkl
ressat/: config.py  ressat_predict.py  ressat_train.py  utils.py
ressat.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
